[package]
name = "partially_blind_rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-bigint = "0.5.5"
crypto-primes = {version = "0.5.0", features = ["default-rng"]}
hex = "0.4.3"
hex-literal = "0.4.1"
hkdf = "0.12.3"
num-bigint = { version = "0.8.4", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
num-integer = "0.1.46"
num-traits = { version= "0.2.9", default-features = false, features = ["libm"] }
rand = "0.8.5"
rsa = "0.9.2"
sha2 = "0.10.8"
